# PCB_GCODE_toolbox

./: .gitignore  .pre-commit-config.yaml  PCB_creator.spec  PCB_toolbox.spec  README.md  config.py  gcode_generator.py  gerber_parser.py  main.py  presets.json  pyproject.toml  requirements.txt  settings.json  simulator_router.py  start.bat
.github/workflows/: build.yml  ci.yml
gerber_example/Gerber_PCB1_2026-06-24/: Drill_PTH_Through.DRL  FlyingProbeTesting.json  Gerber_BoardOutlineLayer.GKO  Gerber_TopLayer.GTL
gerber_example/Gerber_PCB1_2026-06-24/gcode_output_top/: drills.gcode  isolation.gcode  outline.gcode  rubout.gcode
static/: creator.js  index.html  simulator.js  style.css
tests/: test_gcode_generator.py  test_gerber_parser.py
